k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jkeenan-cv
  namespace: jkeenan-cv
spec:
  selector:
    app: jkeenan-cv
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
